# movement

./: .gitignore  Cargo.toml  flake.nix  log_file.txt  test_result.txt
.data/: logfile  postgresql.conf
.data/base/1/: 1259  2619  2619_fsm  2619_vm  2696  2840  2841
.data/base/5/: 1247  1249  1249_vm  1259  16385  16389  16535  16541  16543  16544  16545  16588  16590  16591  16597  16598  16600  16601  16609  16612  16618  16619  16621  16622  16623  16629  16630  16632  16633  16634  16635  16636  16637  16644  16646  16647  16648  16650  16651  16652  (+131 more)
.data/global/: 1214  1232  1233  1260  pg_control
.data/pg_stat/: pgstat.stat
.github/workflows/: checks-all.yml
networks/suzuka/setup/src/: main.rs
networks/suzuka/suzuka-client/: Cargo.toml  log_file.txt  test_result.txt
networks/suzuka/suzuka-client/src/load_soak_testing/: mod.rs
networks/suzuka/suzuka-client/src/tests/: mod.rs  settlement_state.rs
networks/suzuka/suzuka-full-node/: Cargo.toml
networks/suzuka/suzuka-full-node/src/: partial.rs
nix/: m1-da-light-node.nix  movement-services.nix
process-compose/suzuka-full-node/: process-compose.load.yml  process-compose.setup-eth-local.yml  process-compose.test.yml  process-compose.yml
protocol-units/bridge/contracts/src/: NativeBridge.sol
protocol-units/bridge/contracts/test/: NativeBridge.t.sol
protocol-units/bridge/integration-tests/src/: lib.rs
protocol-units/bridge/move-modules/: Move.toml  Prover.toml
protocol-units/execution/opt-executor/: Cargo.toml
protocol-units/mempool/util/: Cargo.toml
(+26 files in other folders)
