[package]
name = "suzuka-client"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
publish = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-sdk = { workspace = true }
anyhow = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
maptos-execution-util = { workspace = true }
mcr-settlement-client = { workspace = true }
suzuka-config = { workspace = true }
dot-movement = { workspace = true }

alloy-contract = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-signer-wallet = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-transport = { workspace = true }

reqwest = { workspace = true }
serde_json = { workspace = true }

dotenv = "0.15.0"

[lints]
workspace = true
